# hypnos_core

./: .gitignore  Cargo.toml  README.md  todo
src/: changelog  commands.rs  config.rs  lib.rs  main.rs
src/commands/: backup.rs  execute.rs  help.rs  invalid.rs  ping.rs  recompile.rs  script.rs  sessions.rs  syscheck.rs
src/default/: template.conf
